--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
-header div {
+header nav {
     /*Top three links*/
     padding-top: 15px;
     margin-right: 20px;
@@ -38,11 +38,11 @@ header div {
     font-size: 20px;
 }
 
-header div ul {
+header nav ul {
     list-style-type: none;
 }
 
-header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -69,7 +69,7 @@ p {
 }
 
 
-benefits {
+benefit {
     /*Right information panel*/
     margin-right: 20px;
     padding: 20px;
@@ -81,52 +81,21 @@ benefits {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefits {
     /*Right info panel headings*/
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefits h3 {
     /*Right info panel text*/
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
 
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefits img {
     /*Right info panel pictures*/
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -150,7 +119,7 @@ content {
     display: inline-block;
     margin-left: 20px;
 }
-.search-engine-optimization {
+.contentClass {
     /*Bottom three panel boxes*/
     margin-bottom: 20px;
     padding: 50px;
@@ -160,51 +129,13 @@ content {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+.contentClass img {
     /*Bottom three panel pictures*/
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
+.contentClass h2 {
     /*Bottom three panel headers*/
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-
-.social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
